ADD product characteristics on price components + check if profile and chars set updates validation + ADD recurring-prepaid

--- a/src/app/shared/forms/offer/price-plans/configuration-profile-drawer/configuration-profile-drawer.component.html
+++ b/src/app/shared/forms/offer/price-plans/configuration-profile-drawer/configuration-profile-drawer.component.html
@@ -35,7 +35,7 @@
                      class="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer dark:bg-gray-700">
               <span class="text-sm text-gray-500 dark:text-gray-400 absolute start-0 -bottom-6">Min ({{char?.value.options[0].valueFrom}})</span>
               @if(char?.value.options?.length > 0){
-                <span class="text-sm text-gray-500 dark:text-gray-400 absolute start-1/2 -bottom-6">{{char?.value.options[0].value}} {{char?.value.options[0].unitOfMeasure}}</span>
+                <span class="text-sm text-gray-500 dark:text-gray-400 absolute start-1/2 -bottom-6">{{char?.value.selectedValue}} {{char?.value.options[0].unitOfMeasure}}</span>
               }
               <span class="text-sm text-gray-500 dark:text-gray-400 absolute end-0 -bottom-6">Max ({{char?.value.options[0].valueTo}})</span>
             </div>
