--- a/src/app/shared/forms/offer/price-plans/price-component-drawer/price-component-drawer.component.html
+++ b/src/app/shared/forms/offer/price-plans/price-component-drawer/price-component-drawer.component.html
@@ -43,7 +43,9 @@
       <div class="flex flex-row">
           <select id="type" (change)="changePriceComponentChar($event)"
           class="mb-2 mr-2 bg-gray-50 dark:bg-secondary-300 border border-gray-300 dark:border-secondary-200 dark:text-white text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+            @if(!selectedCharacteristic){
               <option value="">Select a characteristic</option>
+            }          
               @for(char of prodChars; track char){                          
                   <option value="{{char.id}}">{{char.name}}</option>
               }
