--- a/src/app/shared/forms/offer/offer.component.html
+++ b/src/app/shared/forms/offer/offer.component.html
@@ -53,24 +53,26 @@
         }@else{
           <app-license-form [data]="offer" [formType]="formType" [form]="productOfferForm.controls['license']"></app-license-form>
         }
-      } @if (currentStep === 5) {
+      } @else if (currentStep === 5) {
         @if(this.formType=='update'){
           <app-procurement-mode [formType]="formType" [form]="productOfferForm.controls['procurementMode']"></app-procurement-mode>
         }@else{
           <app-price-plans-form [form]="productOfferForm" [prodSpec]="productOfferForm.get('prodSpec')?.value"></app-price-plans-form>
         }         
-      } @if (currentStep === 6) {
+      } @else if (currentStep === 6) {
         @if(this.formType=='update'){
           <app-replication-visibility></app-replication-visibility>
         }@else{
           <app-procurement-mode [formType]="formType" [form]="productOfferForm.controls['procurementMode']"></app-procurement-mode>
         }
-      } @if(currentStep === 7) {
+      } @else if(currentStep === 7) {
         @if(this.formType=='update'){
           <app-offer-summary [productOfferForm]="productOfferForm"></app-offer-summary>
         }@else{
           <app-replication-visibility></app-replication-visibility>
         }
+      } @else if(currentStep === 8) {
+        <app-offer-summary [productOfferForm]="productOfferForm"></app-offer-summary>
       }
     </div>
 
@@ -105,12 +107,13 @@
                 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/>
         </svg>
       </button>
-
-      <button (click)="submitForm()"
-              [disabled]="!isFormValid"
-              class="px-4 py-2 bg-primary-100 hover:bg-primary-50 text-base font-medium text-white rounded-lg">
-        {{ formType === 'create' ? 'Create Offer' : 'Update Offer' }}
-      </button>
+      @if(formType === 'create' && currentStep === 8 || formType === 'update'){
+        <button (click)="submitForm()"
+        [disabled]="!isFormValid"
+        class="px-4 py-2 bg-primary-100 hover:bg-primary-50 text-base font-medium text-white rounded-lg">
+          {{ formType === 'create' ? 'Create Offer' : 'Update Offer' }}
+        </button>
+      }
     </div>
   </form>
 </div>
