--- a/src/app/pages/seller-offerings/offerings/seller-offer/create-offer/create-offer.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-offer/create-offer/create-offer.component.html
@@ -26,7 +26,7 @@
 
   <app-offer-form [partyId]="partyId" [formType]="'create'"></app-offer-form>
 
-  <div class="bg-secondary-50 dark:bg-secondary-100 border border-secondary-50 dark:border-gray-800 mt-4 p-8 rounded-lg">
+  <!--<div class="bg-secondary-50 dark:bg-secondary-100 border border-secondary-50 dark:border-gray-800 mt-4 p-8 rounded-lg">
     <h2 class="text-3xl font-bold text-primary-100 dark:text-white ml-4">{{ 'CREATE_OFFER._new' | translate }}</h2>
     <hr class="h-px m-4 bg-gray-300 dark:bg-gray-200 border-0">
     <div class="md:grid md:grid-cols-25/75 xl:grid-cols-20/80">
@@ -100,7 +100,7 @@
                 </span>
             </button>
             <hr class="h-px mb-2 bg-gray-300 dark:bg-gray-200 border-0">
-            <!--<button id="sla" (click)="toggleSLA()" [disabled]="!slaDone" class="grid grid-cols-20/80 mb-2">
+            <button id="sla" (click)="toggleSLA()" [disabled]="!slaDone" class="grid grid-cols-20/80 mb-2">
                 <span id="sla-circle" class="flex items-center justify-center w-8 h-8 border border-2 border-gray-400 rounded-full shrink-0">
                     7
                 </span>
@@ -109,7 +109,7 @@
                     <p class="flex text-xs justify-start">{{ 'CREATE_OFFER._sla_info' | translate }}</p>
                 </span>
             </button>
-            <hr class="h-px mb-2 bg-gray-300 dark:bg-gray-200 border-0">-->
+            <hr class="h-px mb-2 bg-gray-300 dark:bg-gray-200 border-0">
             <button id="price" (click)="togglePrice()" [disabled]="!priceDone"
             class="grid sm:grid-rows-2 md:grid-rows-1 md:grid-cols-25/75 xl:grid-cols-20/80 mb-2 mr-2 md:mr-0 text-gray-500 justify-items-center md:justify-items-start">
                 <span id="price-circle" class="flex items-center justify-center w-6 h-6 md:w-8 md:h-8 border border-2 border-gray-400 rounded-full shrink-0">
@@ -696,7 +696,7 @@
                                                 <input id="select-checkbox" [checked]="isCategorySelected(cat)" type="checkbox" value="" (click)="addCategory(cat)" class="flex w-4 h-4 justify-end text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
                                             </td>
                                         </tr>
-                                        <!--@if(cat.children.length>0){
+                                        @if(cat.children.length>0){
                                             @for(child of cat.children; track child){
                                                 <tr class="hover:bg-gray-200 dark:bg-secondary-300 dark:border-gray-700 dark:hover:bg-secondary-200">
                                                     <td colspan=3>
@@ -704,7 +704,7 @@
                                                     </td>
                                                 </tr>
                                             }
-                                        }-->
+                                        }
                                     }
                                 </tbody>
                             </table>
@@ -1058,13 +1058,13 @@
                         </table>
                     </div>
                 }
-                <!--<div class="col-span-2 flex align-items-middle h-fit m-4">
+                <div class="col-span-2 flex align-items-middle h-fit m-4">
                     <label for="prod-brand" class="font-bold text-lg">{{ 'CREATE_OFFER._is_free_price' | translate }}</label>
                     <label class="inline-flex items-center me-5 cursor-pointer ml-4">
                         <input type="checkbox" (change)="toggleOpenPrice=!toggleOpenPrice" value="" class="sr-only peer">
                         <div class="relative w-11 h-6 bg-gray-200 rounded-full peer peer-focus:ring-4 peer-focus:ring-primary-100 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-0.5 after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all peer-checked:bg-primary-100"></div>
                     </label>
-                </div>-->
+                </div>
                 @if(!showCreatePrice){
                     <div class="flex w-full justify-items-center justify-center ml-4">
                         <button type="button" (click)="showNewPrice()" class="flex text-white justify-center bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center">
@@ -1464,7 +1464,7 @@
             }
         </div>
     </div>
-</div>
+</div> -->
 
 
 @if(showError){
