ADD dark mode in some components + fix summary + fix profile saving + delete spanish hardcoding

--- a/src/app/shared/forms/offer/offer-summary/offer-summary.component.html
+++ b/src/app/shared/forms/offer/offer-summary/offer-summary.component.html
@@ -217,7 +217,7 @@
     </div>
 }
 -->
-@if(productOfferForm.get('license')?.value){
+@if(!isLicenseEmpty) {
     <h2 class="font-bold text-lg dark:text-white">{{ 'CREATE_OFFER._license' | translate }}</h2>
     <div>
         <label for="treatment" class="font-bold text-base dark:text-white">{{ 'CREATE_OFFER._treatment' | translate }}</label>
