--- a/src/app/shared/forms/offer/price-plans/price-components-table/price-components-table.component.html
+++ b/src/app/shared/forms/offer/price-plans/price-components-table/price-components-table.component.html
@@ -3,10 +3,10 @@
   <table class="w-full text-sm text-left text-gray-500 dark:text-gray-200">
     <thead class="text-xs text-gray-700 uppercase bg-gray-100 dark:bg-gray-700 dark:text-gray-300">
     <tr>
-      <th class="px-6 py-3">Nombre</th>
-      <th class="px-6 py-3">Descripción</th>
-      <th class="px-6 py-3">Tipo de Precio</th>
-      <th class="px-6 py-3 text-center">Acciones</th>
+      <th class="px-6 py-3">Name</th>
+      <th class="px-6 py-3">Description</th>
+      <th class="px-6 py-3">Price Type</th>
+      <th class="px-6 py-3 text-center">Actions</th>
     </tr>
     </thead>
     <tbody>
