--- a/src/app/shared/forms/offer/category/category.component.html
+++ b/src/app/shared/forms/offer/category/category.component.html
@@ -105,7 +105,7 @@
           }
         } @empty {
           <tr>
-            <td class="text-center" colspan="3">There's no subcategories</td>
+            <td class="text-center dark:bg-gray-800" colspan="3">There's no subcategories</td>
           </tr>
         }
       </ng-template>
