--- a/src/app/shared/forms/offer/price-plans/configuration-profile-drawer/configuration-profile-drawer.component.html
+++ b/src/app/shared/forms/offer/price-plans/configuration-profile-drawer/configuration-profile-drawer.component.html
@@ -32,7 +32,7 @@
                      [min]="char.value.options[0].valueFrom"
                      [max]="char.value.options[0].valueTo"
                      [value]="char.value.selectedValue"
-                     class="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer dark:bg-gray-700">
+                     class="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer dark:bg-gray-700 dark:text-gray-100">
               <span class="text-sm text-gray-500 dark:text-gray-400 absolute start-0 -bottom-6">Min ({{char?.value.options[0].valueFrom}})</span>
               @if(char?.value.options?.length > 0){
                 <span class="text-sm text-gray-500 dark:text-gray-400 absolute start-1/2 -bottom-6">{{char?.value.selectedValue}} {{char?.value.options[0].unitOfMeasure}}</span>
@@ -42,7 +42,7 @@
           }@else{
             <!-- Dropdown Selector -->
             <select *ngIf="!char.value.options?.[0]?.valueFrom"
-                    class="mb-2 bg-gray-50 dark:bg-secondary-300 border text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
+                    class="mb-2 bg-gray-50 dark:bg-secondary-300 border text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:text-gray-100"
                     (change)="changeProfileValue($index, $event)">
               <option *ngFor="let opt of char.value.options" [value]="opt.value" [selected]="opt.isDefault">
                 {{ opt.value }} <span *ngIf="opt.unitOfMeasure">({{ opt.unitOfMeasure }})</span>
@@ -54,7 +54,7 @@
     </div>
     <!-- Action Buttons -->
     <div class="flex justify-end space-x-3 p-4">
-      <button type="button" (click)="closeDrawer()" class="px-4 py-2 bg-gray-300 dark:bg-gray-600 rounded">Cancel</button>
+      <button type="button" (click)="closeDrawer()" class="px-4 py-2 bg-gray-300 dark:bg-gray-600 rounded dark:text-white">Cancel</button>
       <button type="button" (click)="saveProfile()"
               class="px-4 py-2 rounded text-white transition"
               [ngClass]="{'bg-primary-100 hover:bg-primary-50': form.valid, 'bg-gray-400 cursor-not-allowed': form.invalid}">
