ADD ux tasks 39 + 40 + 50 + 51 + 42 + 45

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -10,7 +10,10 @@
     </div>
 
     <!-- Footer Links -->
-    <ul class="flex flex-wrap items-center text-sm font-medium text-gray-500 dark:text-gray-400">  
+    <ul class="flex flex-wrap items-center text-sm font-medium text-gray-500 dark:text-gray-400">
+      <li>
+        <button (click)="feedback=!feedback;$event.stopPropagation();" class="mr-4 hover:underline md:mr-6">Feedback</button>
+      </li>
       <li>
         <a href="../assets/documents/privacy.pdf" target="_blank" class="mr-4 hover:underline md:mr-6">{{ 'FOOTER._privacy' | translate }}</a>
       </li>
@@ -27,3 +30,7 @@
   </div>
 
 </footer>
+@if(feedback){
+  <feedback-modal class="fixed inset-0 flex items-center justify-center z-40"></feedback-modal>
+
+}
